@@ -1,3 +1,9 @@
+2019-06-22 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/z88/ralloc2.cc,
+	  src/z80/gen.c:
+	  Improve handling of a in bitwise operations.
+
 2019-06-19 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
 
 	* support/scripts/sdcc.nsi: pic14/libm no longer has *.c files
